# cpp_project

args_parser/: CMakeLists.txt  main.cpp
args_parser/include/: args_parser.h  option_descriptor.h
args_parser/include/exceptions/: required_option_is_missing_exception.h  value_is_missing_exception.h
args_parser/src/: args_parser.cpp
args_parser/src/exceptions/: required_option_is_missing_exception.cpp  value_is_missing_exception.cpp
diff/: CMakeLists.txt  diff.cpp  diff.h  main.cpp
find/: CMakeLists.txt  find.cpp  find.h  main.cpp
grep/: CMakeLists.txt  grep.cpp  grep.h  main.cpp
split/: CMakeLists.txt  main.cpp  split.cpp  split.h
wc/: CMakeLists.txt  main.cpp
